--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,17 @@ html {
     color: white;
     font-size: 150%;
     cursor: pointer;
+    align-items: center;
+}
+
+.nav-button input{
+    display: none;
+}
+
+.nav-button svg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .stage-banner {
@@ -112,6 +123,50 @@ html {
     right: 0;
 }
 
+.collapsible-menu {
+    position: absolute;
+    display: inline-block;
+}
+
+.collapsible-menu-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.menu-content {
+    position: absolute;
+    bottom: 0.5em;
+    background-color: #f1f1f1;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.menu-item {
+    display: inline-block;
+    overflow: hidden;
+    width: 10em;
+}
+
+.menu-item-fields {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.menu-field {
+    color: black;
+    padding: 0.25em;
+    display: inline-block;
+    text-decoration: none;
+    font-size: 150%;
+    width: 100%;
+}
+
+.menu-item-selected {
+    text-decoration: none;
+    font-size: 110%;
+    background-color: gray;
+}
+
 #entry-form {
     display: flex;
     flex-direction: column;
@@ -155,3 +210,5 @@ html {
     justify-content: center;
     color: white;
 }
+
+.hidden { display:none; }
