--- a/src/index.css
+++ b/src/index.css
@@ -113,7 +113,15 @@ th {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 80px;
+    /* height: 80px; */
+    flex-direction: column;
+}
+
+.stage-banner-outer-container {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    flex-direction: column;
 }
 
 .stage-banner svg {
