--- a/src/index.css
+++ b/src/index.css
@@ -3,21 +3,19 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik');
 @charset "UTF-8";
 
+
 body {
-    /*
     height: 100%;
     width: 100%;
-    */
     padding: 0;
     margin: 0;
     background: radial-gradient(black, #003300);
 }
 
+
 html {
-    /*
     height: 100%;
     width: 100%;
-    */
     padding: 0;
     margin: 0;
 }
@@ -65,11 +63,20 @@ th {
 }
 
 .main-stage {
-    flex: 10;
-    display: flex;
+    padding: 5px 5px 5px 5px;
+    overflow-y: hidden;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background: radial-gradient(black, #003300);
+    display: inline-flex;
     flex-direction: column;
-    padding: 85px 5px 5px 5px;
-    overflow-y: scroll;
+    z-index: 1;
+}
+
+.main-stage-content {
+    display: inline-flex;
+    flex-direction: column;
 }
 
 .nav-button {
@@ -94,6 +101,15 @@ th {
     margin-right: auto;
 }
 
+.stage-banner-container {
+    /* position: fixed; */
+    /* top: 0; */
+    width: 100%;
+    /* min-height: 80px; */
+    flex-direction: column;
+    position: static;
+}
+
 .stage-banner {
     position: relative;
     margin: 0.5em;
@@ -107,14 +123,6 @@ th {
 .launcher-container {
     flex-direction: column;
     padding: 85px 5px 5px 5px;
-}
-
-.stage-banner-container {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    /* height: 80px; */
-    flex-direction: column;
 }
 
 .stage-banner-outer-container {
@@ -154,6 +162,24 @@ th {
     height: 1em;
 }
 
+.banner-menu {
+    position: fixed;
+    right: 0;
+    display: inline-block;
+    z-index: 10;
+}
+
+.banner-menu-content {
+    position: absolute;
+    top: 0.5em;
+    right: 0;
+    background-color: #f1f1f1;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    display: flex;
+    flex-direction: column;
+    opacity: 1.0;
+}
+
 .banner-button {
     display: flex;
     flex-direction: row;
@@ -163,6 +189,15 @@ th {
 
 .banner-button svg {
     position: relative;
+}
+
+.ft-event-selector {
+    width: 100%;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+    align-content: flex-start;
+    margin: 5px;
 }
 
 
@@ -231,6 +266,8 @@ th {
     flex-direction: row;
     justify-content: flex-start;
     min-height: 1.5em;
+    overflow: hidden;
+    position: relative;
 }
 
 .ft-name-fields {
@@ -315,23 +352,6 @@ th {
 .collapsible-menu {
     position: absolute;
     display: inline-block;
-}
-
-.banner-menu {
-    position: fixed;
-    right: 0;
-    display: inline-block;
-}
-
-.banner-menu-content {
-    position: absolute;
-    top: 0.5em;
-    right: 0;
-    background-color: #f1f1f1;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
 }
 
 .menu-content {
@@ -436,6 +456,7 @@ th {
     display: flex;
     flex-direction: row;
     width: 100%;
+    overflow-y: scroll;
 }
 
 .widget-container section {
@@ -488,7 +509,7 @@ th {
 }
 
 .modal {
-    z-index: 3;
+    z-index: 30;
     position: fixed;
     top: 33%;
     left: 50%;
@@ -502,12 +523,14 @@ th {
     flex-direction: column;
     background-color: #99ff66;
     align-items: center;
-    width:400px;
+    width:300px;
+    height:320px;
+    opacity: 1.0;
 }
 
 .modal-textarea {
-    width:350px;
-    height:175px;
+    width:280px;
+    height:150px;
 }
 
 .schedule-ladder {
@@ -602,6 +625,30 @@ th {
 
 .ft-card-thumbnail {
     width: 50px;
+}
+
+.ft-card-overlay {
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    position: absolute;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: stretch;
+    opacity: 0.5;
+}
+
+.ft-fifty-button {
+    width: 50px;
+    color: red;
+    background-color: blue;
+    font-size: 20px;
+    text-align: center;
+    margin: 0px 5px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .hidden { display:none; }
