--- a/src/index.css
+++ b/src/index.css
@@ -27,12 +27,14 @@ th {border-left: 1px solid white;border-right: 1px solid white;padding: 0 0.25em
 .footer {height: 80px;width: 100%;}
 .form-question {align-items: center;display: flex;justify-content: space-between;padding: 0;}
 .form-question label {padding: 0;}
-.ft-als-l {align-self: left}
-.ft-als-r {align-self: right}
+.ft-als-l {align-self: start}
+.ft-als-r {align-self: end}
 .ft-average-rating-field {display: flex;flex-direction: row;justify-content: left;}
 .ft-banner-button-container {display: flex;flex-direction: row;height: 1em;justify-content: flex-end;width: 38%;}
 .ft-card {background: white;color: black;display: flex;flex-direction: column;flex-shrink: 0;font-size: 100%;justify-content: space-between;margin: 0.5em;padding: 0.5em;}
 .ft-card-above-overlay {z-index: 3}
+.ft-card-container-horizontal {box-sizing:border-box;color:#DD00DD;display:flex;height:60px;justify-content:space-around;padding:0 6em;position:sticky;top: 0px;z-index:1;}
+.ft-card-container-horizontal > .ft-card {width: 300px;}
 .ft-card-large {align-items: center;background: white;color: black;display: flex;flex-direction: row;flex-grow: 1;flex-shrink: 0;font-size: 100%;justify-content:  flex-start;margin: 0.5em;max-width: 100%;padding: 0.5em;position: relative;}
 .ft-card-overlay {align-items: flex-end;display: flex;flex-direction: row-reverse;height: 100%;left: 0;opacity: 0.5;position: absolute;top: 0;width: 100%;z-index: 2;}
 .ft-card-thumbnail {width: 50px;}
@@ -50,12 +52,13 @@ th {border-left: 1px solid white;border-right: 1px solid white;padding: 0 0.25em
 .ft-horizontal-fields {display: flex;flex-direction: row;position: relative;}
 .ft-image-attribution a {color: lightskyblue;font-size: 75%;}
 .ft-name-fields {display: flex;flex-direction: row;justify-content: left;}
+.ft-pane-single {min-width: 300px;width: 33%}
+.ft-pane-double {min-width: 600px;width: 66%}
+.ft-pane-double .widget-container section {width: 100%;}
+.ft-pane-triple {min-width: 900px;width: 99%}
 .ft-rating-field {display: flex;flex-direction: row;font-size: 200%;justify-content: left;}
 .ft-schedule-header {box-sizing:border-box;color:#DD00DD;display:flex;height:60px;justify-content:space-around;padding:0 6em;position:sticky;top: 0px;z-index:1;}
-.ft-schedule-header-field {
-  width:300px;
-  text-align: center;
-}
+.ft-schedule-header-field {text-align: center;width:300px;}
 .ft-set-diff-fields {display: flex;flex-direction: row;font-size: 85%;justify-content: space-between;margin: 0.5em 0 0;min-height: 1.27em;text-transform: uppercase;}
 .ft-set-diff-fields > .ft-name-field {width: 25%;}
 .ft-set-name-field {display: flex;flex-direction: row;justify-content: center;}
@@ -125,11 +128,6 @@ th {border-left: 1px solid white;border-right: 1px solid white;padding: 0 0.25em
 .widget-container section.full {max-height: none;width: 98%}
 
 
-.ft-pane-single {min-width: 300px;width: 33%}
-.ft-pane-double {min-width: 600px;width: 66%}
-.ft-pane-double .widget-container section {width: 100%;}
-
-.ft-pane-triple {min-width: 900px;width: 99%}
 
 /*
 	toggle button css based on:
@@ -137,90 +135,21 @@ th {border-left: 1px solid white;border-right: 1px solid white;padding: 0 0.25em
 
 */
 
-ul,
-li {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
+ul,li {list-style: none;margin: 0;padding: 0;}
 
-.ft-toggle-control {
-	text-align: center;
-	align-items: center;
-}
+.ft-toggle-control {align-items: center;text-align: center;}
 
-.ft-toggle-list-item {
-  align-items: center;
-  display: flex;
-  margin: 0 2em;
-}
+.ft-toggle-list-item {align-items: center;display: flex;margin: 0 2em;}
+.ft-toggle-list-item > div {display: inline-block;}
+.ft-toggle {display: none;}
 
-.ft-toggle-list-item > div {
-  display: inline-block;
-}
-
-.ft-toggle {
-  display: none;
-}
-
-.ft-toggle, .ft-toggle:after, .ft-toggle:before, .ft-toggle *, .ft-toggle *:after, .ft-toggle *:before, .ft-toggle + .ft-toggle-btn {
-  box-sizing: border-box;
-}
-
-.ft-toggle::-moz-selection, .ft-toggle:after::-moz-selection, .ft-toggle:before::-moz-selection, .ft-toggle *::-moz-selection, .ft-toggle *:after::-moz-selection, .ft-toggle *:before::-moz-selection, .ft-toggle + .ft-toggle-btn::-moz-selection {
-  background: none;
-}
-
-.ft-toggle::selection, .ft-toggle:after::selection, .ft-toggle:before::selection, .ft-toggle *::selection, .ft-toggle *:after::selection, .ft-toggle *:before::selection, .ft-toggle + .ft-toggle-btn::selection {
-  background: none;
-}
-
-.ft-toggle + .ft-toggle-btn {
-  outline: 0;
-  display: inline-block;
-  width: 4em;
-  height: 2em;
-  position: relative;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.ft-toggle + .ft-toggle-btn:after, .ft-toggle + .ft-toggle-btn:before {
-  position: relative;
-  display: block;
-  content: "";
-  width: 50%;
-  height: 100%;
-}
-
-.ft-toggle + .ft-toggle-btn:after {
-  left: 0;
-}
-
-.ft-toggle + .ft-toggle-btn:before {
-  display: none;
-}
-
-.ft-toggle:checked + .ft-toggle-btn:after {
-  left: 50%;
-}
-
-.ft-toggle-light + .ft-toggle-btn {
-  background: #f0f0f0;
-  border-radius: 2em;
-  padding: 0 2px;
-  transition: all 0.4s ease;
-}
-
-.ft-toggle-light + .ft-toggle-btn:after {
-  border-radius: 50%;
-  background: #fff;
-  transition: all 0.2s ease;
-}
-
-.ft-toggle-light:checked + .ft-toggle-btn {
-  background: #9fd6ae;
-}
+.ft-toggle, .ft-toggle:after, .ft-toggle:before, .ft-toggle *, .ft-toggle *:after, .ft-toggle *:before, .ft-toggle + .ft-toggle-btn {box-sizing: border-box;}
+.ft-toggle::selection, .ft-toggle:after::selection, .ft-toggle:before::selection, .ft-toggle *::selection, .ft-toggle *:after::selection, .ft-toggle *:before::selection, .ft-toggle + .ft-toggle-btn::selection {background: none;}
+.ft-toggle + .ft-toggle-btn {cursor: pointer;display: inline-block;height: 2em;outline: 0;position: relative;user-select: none;width: 4em;}
+.ft-toggle + .ft-toggle-btn:after, .ft-toggle + .ft-toggle-btn:before {content: "";display: block;height: 100%;position: relative;width: 50%;}
+.ft-toggle + .ft-toggle-btn:after {left: 0;}
+.ft-toggle + .ft-toggle-btn:before {display: none;}
+.ft-toggle:checked + .ft-toggle-btn:after {left: 50%;}
+.ft-toggle-light + .ft-toggle-btn {background: #f0f0f0;border-radius: 2em;padding: 0 2px;transition: all 0.4s ease;}
+.ft-toggle-light + .ft-toggle-btn:after {border-radius: 50%;background: #fff;transition: all 0.2s ease;}
+.ft-toggle-light:checked + .ft-toggle-btn {background: #9fd6ae;}
