adding follow/block pt 1

--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,9 @@
   --own-content: lightsteelblue;
 }
 
-body {background: radial-gradient(black, #003300);height: 100%;margin: 0;padding: 0;width: 100%;}
+body {background: radial-gradient(black, #003300);height: 100%;margin: 0;overflow: scroll;padding: 0;width: 100%;}
 html {height: 100%;margin: 0;padding: 0;width: 100%;}
-input { font-family: 'FontAwesome'; }
+input { font-family: 'Font Awesome 5 Free'; font-weight: 900; max-width: 100%;}
 td {padding: 0.2em 0;text-align: center;}
 th {border-left: 1px solid white;border-right: 1px solid white;padding: 0 0.25em;}
 #app {color: white;display: flex;flex-direction: column;font-family: 'Rubik', sans-serif;}
@@ -38,11 +38,11 @@ th {border-left: 1px solid white;border-right: 1px solid white;padding: 0 0.25em
 .ft-banner-button-container {display: flex;flex-direction: row;height: 1em;justify-content: flex-end;width: 38%;}
 .ft-button-forty {align-items: center;background-color: blue;color: red;display: inline-flex;flex-shrink: 0;font-size: 18px;justify-content: center;margin: 0px 5px;height: 40px;overflow: hidden;text-align: center;width: 40px;}
 .ft-card {background: white;color: black;display: flex;flex-direction: column;flex-shrink: 0;font-size: 100%;justify-content: space-between;margin: 0.5em;padding: 0.5em;}
-.ft-card-above-overlay {z-index: 3}
+.ft-card-above-overlay {justify-content: flex-end; ;z-index: 3}
 .ft-card-container {display: flex;flex-direction: column;overflow-y: scroll;}
 .ft-card-container > .ft-horizontal-fields > .ft-card-large {flex-shrink: 1}
-.ft-card-container-horizontal {box-sizing:border-box;color:#DD00DD;display:flex;height:60px;justify-content:space-around;padding:0 6em;position:sticky;top: 0px;z-index:1;}
-.ft-card-container-horizontal > .ft-card {width: 300px;}
+.ft-card-container-horizontal {box-sizing:border-box;color:#DD00DD;display:flex;height:60px;justify-content:space-around;padding:0;position:sticky;top: 0px;z-index:1;}
+.ft-card-container-horizontal > .ft-card {flex-grow: 1;flex-shrink: 1;min-width: 3em;}
 .ft-card-large {align-items: center;background: white;color: black;display: flex;flex-direction: row;flex-grow: 1;flex-shrink: 0;font-size: 100%;justify-content:  flex-start;margin: 0.5em;max-width: 100%;padding: 0.5em;position: relative;}
 .ft-card-overlay {align-items: flex-end;display: flex;flex-direction: row-reverse;height: 100%;left: 0;opacity: 0.5;position: absolute;top: 0;width: 100%;z-index: 2;}
 .ft-card-selected {background-color: var(--selected-bg-color);}
@@ -70,9 +70,11 @@ th {border-left: 1px solid white;border-right: 1px solid white;padding: 0 0.25em
 .ft-menu-item-fields {display: inline-flex;flex-direction: row;justify-content: left;vertical-align: top;}
 .ft-modal {bottom: 10%;color: black;left: 50%;max-height: 80%;position: fixed;z-index: 30;}
 .ft-modal-content {align-items: center;background-color: #99ff66;display: flex;flex-direction: column;left: -50%;min-height:320px;opacity: 1.0;position: relative;width:300px;}
+.ft-modal-content > .ft-close-click {align-self: flex-end;}
+.ft-modal-content > .ft-menu-item {width: 100%;}
 .ft-modal-textarea {height:150px;width:280px;}
 .ft-name-fields {display: flex;flex-direction: row;justify-content: left;}
-.ft-nav-button {cursor: pointer;font-size: 150%;height: 50px;width:50px;}
+.ft-nav-button {cursor: pointer;flex-shrink: 0;font-size: 150%;height: 50px;width:50px;}
 .ft-nav-button > svg {margin: 0 auto;display: block;}
 .ft-nav-button input{display: none;}
 .ft-own-content.ft-own-content {background-color: var(--own-content);}
@@ -80,10 +82,14 @@ th {border-left: 1px solid white;border-right: 1px solid white;padding: 0 0.25em
 .ft-pane-double {min-width: 600px;overflow-y: scroll;width: 66%;}
 .ft-pane-double .widget-container section {width: 100%;}
 .ft-pane-triple {min-width: 900px;overflow-y: scroll;width: 99%;}
+.ft-quarter {background-color: black;color: red;flex-grow: 0;flex-shrink: 0;font-size: 25px;text-align: center;width: 25px;}
 .ft-quarter-button {align-items: center;background-color: blue;color: red;display: inline-flex;flex-shrink: 0;font-size: 18px;justify-content: center;margin: 0px 5px;min-height: 25px;overflow: hidden;text-align: center;width: 25px;}
 .ft-rating-field {display: flex;flex-direction: row;font-size: 200%;justify-content: left;}
+.ft-search-bar {flex-grow: 1;}
+.ft-search-field {}
+.ft-search-field-input {width: 8em;}
 .ft-schedule {width: 100%; overflow-x: scroll;}
-.ft-schedule-container {}
+.ft-schedule-container {position: sticky;top:0;}
 .ft-schedule-header {box-sizing:border-box;color:#DD00DD;display:flex;height:60px;justify-content:space-around;padding:0 6em;position:sticky;top: 0px;z-index:1;}
 .ft-schedule-header-field {flex-shrink: 0;text-align: center;width:300px;}
 .ft-set-diff-fields {display: flex;flex-direction: row;font-size: 85%;justify-content: space-between;margin: 0.5em 0 0;min-height: 1.27em;text-transform: uppercase;}
@@ -91,6 +97,11 @@ th {border-left: 1px solid white;border-right: 1px solid white;padding: 0 0.25em
 .ft-set-name-field {display: flex;flex-direction: row;justify-content: center;}
 .ft-set-name-fields {display: flex;flex-direction: row;justify-content: space-between;}
 .ft-spacer {margin: 0 0.25em 0;}
+.ft-stage-banner {align-items: center;background-image: url("img/Crowdshot.jpg");display: flex;flex-direction: row;flex-wrap: nowrap;justify-content: flex-start;margin: 0.5em;position: relative;}
+.ft-stage-banner svg {color: #F7B9A1;font-size: 180%;}
+.ft-stage-banner-container {overflow-y: visible;position: static;width: 100%;}
+.ft-stage-banner-outer-container {flex-direction: column;position: fixed;top: 0;width: 100%;}
+.ft-stage-title {color: #F7B9A1;display: inline-flex;flex-grow: 9;flex-shrink: 9;font-size: 180%;font-weight: bold;letter-spacing: 2px;margin: 5px;overflow: hidden;padding: 10px 0;text-align: left;text-transform: uppercase;white-space: nowrap;}
 .ft-vertical-fields {display: flex;flex-direction: column;justify-content: left;}
 .ft-vertical-fields-100-width {display: flex;flex-direction: column;justify-content: left;width:100%;}
 .ft-widget-container {align-items: flex-start;display: flex;flex-direction: row;flex-grow: 1;flex-wrap: wrap;justify-content: flex-start;min-height: 0px;overflow-y: scroll;padding: 0 0 80px;width: 100%;}
@@ -127,7 +138,6 @@ th {border-left: 1px solid white;border-right: 1px solid white;padding: 0 0.25em
 .main-stage-gametime {background: radial-gradient(#000033, black);display: inline-flex;flex-direction: column;height: 100%;overflow-y: hidden;padding: 5px 5px 5px 5px;position: fixed;width: 100%;z-index: 1;}
 .main-stage-gametime-content-scroll {overflow-y: scroll;padding: 80px 0;}
 .nav-bar {align-items: center;background: #EE5F28;display: flex;flex: 1;justify-content: space-around;}
-.quarter {background-color: black;color: red;flex-grow: 0;flex-shrink: 0;font-size: 25px;text-align: center;width: 25px;}
 .schedule-label {height: 60px;left: 1em;position: sticky;}
 .schedule-labels {display: inline-block;flex-shrink: 0;}
 .schedule-ladder {display: flex; height: 720px; overflow-y: scroll;position: relative;}
@@ -137,12 +147,6 @@ th {border-left: 1px solid white;border-right: 1px solid white;padding: 0 0.25em
 .schedule-set-start-handle {bottom: 0;height: 5px;position: absolute;width: 100%;}
 .schedule-setbox {margin: 0 auto;position: relative;width:300px;}
 .spacer {min-width: 5%;width: 5%;}
-.stage-banner {align-items: center;background-image: url("img/Crowdshot.jpg");display: flex;flex-direction: row;flex-grow: 1;flex-wrap: wrap;justify-content: flex-end;margin: 0.5em;position: relative;}
-.stage-banner > * {margin: 0 5px;}
-.stage-banner svg {color: #F7B9A1;font-size: 180%;}
-.stage-banner-container {flex-direction: column;position: static;width: 100%;}
-.stage-banner-outer-container {flex-direction: column;position: fixed;top: 0;width: 100%;}
-.stage-title {color: #F7B9A1;display: inline-flex;flex-grow: 1;font-size: 180%;font-weight: bold;letter-spacing: 2px;margin: 5px;max-width: 65%;overflow-x: hidden;padding: 10px 0;text-align: left;text-transform: uppercase;white-space: nowrap;}
 .top-border {border-top: 1px solid white;height: 4px;}
 .ui-button {align-self: center;background: radial-gradient(#EE5F28, black);color: cyan;display: flex;justify-content: center;left: 0;margin: 1em 0;padding: 1em;right: 0;width: 50%;}
 
