--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --selected-bg-color: gray;
   --already-read: palevioletred;
   --own-content: lightsteelblue;
+  --gt-background-color: #000033;
 }
 
 body {background: radial-gradient(black, #003300);height: 100%;margin: 0;overflow: scroll;padding: 0;width: 100%;}
@@ -37,6 +38,7 @@ th {border-left: 1px solid white;border-right: 1px solid white;padding: 0 0.25em
 .ft-average-rating-field {display: flex;flex-direction: row;justify-content: left;}
 .ft-banner-button-container {display: flex;flex-direction: row;height: 1em;justify-content: flex-end;width: 38%;}
 .ft-button-forty {align-items: center;background-color: blue;color: red;display: inline-flex;flex-shrink: 0;font-size: 18px;justify-content: center;margin: 0px 5px;height: 40px;overflow: hidden;text-align: center;width: 40px;}
+.ft-button-live {align-self: center;background-color: var(--gt-background-color);color: cyan;display: flex;justify-content: center;left: 0;margin: 1em 0;padding: 1em;text-align: center;width: 50px;}
 .ft-card {background: white;color: black;display: flex;flex-direction: column;flex-shrink: 0;font-size: 100%;justify-content: space-between;margin: 0.5em;padding: 0.5em;}
 .ft-card-above-overlay {justify-content: flex-end; ;z-index: 3}
 .ft-card-container {display: flex;flex-direction: column;overflow-y: scroll;}
@@ -102,6 +104,7 @@ th {border-left: 1px solid white;border-right: 1px solid white;padding: 0 0.25em
 .ft-stage-banner-container {overflow-y: visible;position: static;width: 100%;}
 .ft-stage-banner-outer-container {flex-direction: column;position: fixed;top: 0;width: 100%;}
 .ft-stage-title {color: #F7B9A1;display: inline-flex;flex-grow: 9;flex-shrink: 9;font-size: 180%;font-weight: bold;letter-spacing: 2px;margin: 5px;overflow: hidden;padding: 10px 0;text-align: left;text-transform: uppercase;white-space: nowrap;}
+.ft-ui-button {align-self: center;background: radial-gradient(#EE5F28, black);color: cyan;display: flex;justify-content: center;left: 0;margin: 1em 0;padding: 1em;right: 0;width: 50%;}
 .ft-vertical-fields {display: flex;flex-direction: column;justify-content: left;}
 .ft-vertical-fields-100-width {display: flex;flex-direction: column;justify-content: left;width:100%;}
 .ft-widget-container {align-items: flex-start;display: flex;flex-direction: row;flex-grow: 1;flex-wrap: wrap;justify-content: flex-start;min-height: 0px;overflow-y: scroll;padding: 0 0 80px;width: 100%;}
@@ -135,7 +138,7 @@ th {border-left: 1px solid white;border-right: 1px solid white;padding: 0 0.25em
 .main-stage-content {display: inline-flex;flex-direction: column;}
 .main-stage-content-scroll {height: 720px;overflow-y: scroll;padding: 0 0 80px;}
 .main-stage-content-panes {display: inline-flex;flex-direction: column;flex-shrink: 0;height: 100%;overflow-y: scroll;width: 100%;}
-.main-stage-gametime {background: radial-gradient(#000033, black);display: inline-flex;flex-direction: column;height: 100%;overflow-y: hidden;padding: 5px 5px 5px 5px;position: fixed;width: 100%;z-index: 1;}
+.main-stage-gametime {background: radial-gradient(var(--gt-background-color), black);display: inline-flex;flex-direction: column;height: 100%;overflow-y: hidden;padding: 5px 5px 5px 5px;position: fixed;width: 100%;z-index: 1;}
 .main-stage-gametime-content-scroll {overflow-y: scroll;padding: 80px 0;}
 .nav-bar {align-items: center;background: #EE5F28;display: flex;flex: 1;justify-content: space-around;}
 .schedule-label {height: 60px;left: 1em;position: sticky;}
@@ -148,7 +151,6 @@ th {border-left: 1px solid white;border-right: 1px solid white;padding: 0 0.25em
 .schedule-setbox {margin: 0 auto;position: relative;width:300px;}
 .spacer {min-width: 5%;width: 5%;}
 .top-border {border-top: 1px solid white;height: 4px;}
-.ui-button {align-self: center;background: radial-gradient(#EE5F28, black);color: cyan;display: flex;justify-content: center;left: 0;margin: 1em 0;padding: 1em;right: 0;width: 50%;}
 
 /*
 	toggle button css based on:
