--- a/src/index.css
+++ b/src/index.css
@@ -105,6 +105,7 @@ th {border-left: 1px solid white;border-right: 1px solid white;padding: 0 0.25em
 .ft-stage-banner-outer-container {flex-direction: column;position: fixed;top: 0;width: 100%;}
 .ft-stage-title {color: #F7B9A1;display: inline-flex;flex-grow: 9;flex-shrink: 9;font-size: 180%;font-weight: bold;letter-spacing: 2px;margin: 5px;overflow: hidden;padding: 10px 0;text-align: left;text-transform: uppercase;white-space: nowrap;}
 .ft-ui-button {align-self: center;background: radial-gradient(#EE5F28, black);color: cyan;display: flex;justify-content: center;left: 0;margin: 1em 0;padding: 1em;right: 0;width: 50%;}
+.ft-user-avatar-image {height:60px;width: 60px;}
 .ft-vertical-fields {display: flex;flex-direction: column;justify-content: left;}
 .ft-vertical-fields-100-width {display: flex;flex-direction: column;justify-content: left;width:100%;}
 .ft-widget-container {align-items: flex-start;display: flex;flex-direction: row;flex-grow: 1;flex-wrap: wrap;justify-content: flex-start;min-height: 0px;overflow-y: scroll;padding: 0 0 80px;width: 100%;}
