added buy button to header bar

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   --own-content: lightsteelblue;
   --color-own-content: lightsteelblue;
   --gt-background-color: #000033;
+  --pg-background-color: #003300;
   --festival-red: #ff2828;
   --color-disabled: #666666;
   --color-active: #ff2828;
